Added asking for permission to access gallery

--- a/TV Shows/TV Shows/Profile/Profile.storyboard
+++ b/TV Shows/TV Shows/Profile/Profile.storyboard
@@ -52,7 +52,7 @@
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ni-Mi-Xai">
                                                 <rect key="frame" x="140" y="0.0" width="234" height="100"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                 <state key="normal" title="Change Profile Photo">
                                                     <color key="titleColor" red="0.32156862749999998" green="0.21176470589999999" blue="0.54901960780000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
