--- a/TV Shows/TV Shows/ShowDetails/ShowDetails.storyboard
+++ b/TV Shows/TV Shows/ShowDetails/ShowDetails.storyboard
@@ -21,13 +21,13 @@
                                 <rect key="frame" x="10" y="44" width="394" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="By9-07-btW">
-                                    <rect key="frame" x="0.0" y="794.50000034679067" width="394" height="50"/>
+                                    <rect key="frame" x="0.0" y="795.50000034679067" width="394" height="50"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.32156862749999998" green="0.21176470589999999" blue="0.54901960780000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="v0a-ag-Jpq"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                     <state key="normal" title="Write a review">
                                         <color key="titleColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
@@ -37,14 +37,14 @@
                                 </button>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailsTableViewCellTypeOne" id="183-Jr-8sO" customClass="ShowDetailsTableViewCellTypeOne" customModule="TV_Shows" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="394" height="620.5"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="394" height="621.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="183-Jr-8sO" id="NfF-TW-TKu">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="620.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="621.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="JTH-LW-p5k">
-                                                    <rect key="frame" x="0.0" y="10" width="394" height="600.5"/>
+                                                    <rect key="frame" x="0.0" y="10" width="394" height="601.5"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-top-left" translatesAutoresizingMaskIntoConstraints="NO" id="Y8Z-NJ-g0I">
                                                             <rect key="frame" x="0.0" y="0.0" width="394" height="390"/>
@@ -72,7 +72,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gIr-Uy-K3Q" customClass="RatingView" customModule="TV_Shows" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="546.5" width="394" height="54"/>
+                                                            <rect key="frame" x="0.0" y="546.5" width="394" height="55"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         </view>
                                                     </subviews>
@@ -94,7 +94,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailsTableViewCellTypeTwo" id="Pbh-La-rOB" customClass="ShowDetailsTableViewCellTypeTwo" customModule="TV_Shows" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="645" width="394" height="125"/>
+                                        <rect key="frame" x="0.0" y="646" width="394" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pbh-La-rOB" id="etR-b8-wzh">
                                             <rect key="frame" x="0.0" y="0.0" width="394" height="125"/>
