--- a/TV Shows/TV Shows/WriteReview/WriteReview.storyboard
+++ b/TV Shows/TV Shows/WriteReview/WriteReview.storyboard
@@ -61,8 +61,8 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="GIl-Un-v0M"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Button">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Submit">
                                     <color key="titleColor" white="0.93752956070000004" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
